Documentation/Definitions-and-Proofs/grammar/grammar.tex
\section*{Grammar}

\begin{grammar}
    <Program> ::= <Block>
    \alt <ArithmeticExpression>
    \alt <BooleanExpression>

    <Statement> ::= skip
    \alt 'int' identifier ':=' <ArithmeticExpression>
    \alt 'if' <BooleanExpression> 'then' <Block> 'else' <Block>
    \alt 'while' <BooleanExpression> 'do' <Block>

    <Statements> ::= <Statement>';'<Statement>
    \alt <Statement>

    <Block> ::= '"{"'<Statements>'"}"'
    \alt <Statement>

    <ArithmeticExpression> ::= <ArithmeticTerm> '+' <ArithmeticExpression>
    \alt <ArithmeticTerm> '-' <ArithmeticExpression>
    \alt <ArithmeticTerm>

    <ArithmeticTerm> ::= <ArithmeticFactor> '*' <ArithmeticTerm>
    \alt <ArithmeticFactor> '/' <ArithmeticTerm>
    \alt <ArithmeticFactor> '^' <ArithmeticTerm>
    \alt <ArithmeticFactor>

    <ArithmeticFactor> ::= '('<ArithmeticExpression>')'
    \alt number
    \alt identifier

    <BooleanExpression> ::= <ArithmeticExpression>'=='<ArithmeticExpression>
    \alt <ArithmeticExpression>'"<"'<ArithmeticExpression>
    \alt <ArithmeticExpression>'">"'<ArithmeticExpression>
    \alt <ArithmeticExpression>!=<ArithmeticExpression>
    \alt <BooleanTerm>

    <BooleanTerm> ::= <BooleanFactor> '\&\&'<BooleanExpression>
    \alt <BooleanFactor>'||'<BooleanExpression>
    \alt '!!' <BooleanExpression>
    \alt <BooleanFactor>

    <BooleanFactor> ::= '('<BooleanExpression>')'
    \alt boolean
\end{grammar}
